# npupnp

./: .clang-format  .gitignore  AUTHORS  Makefile.am  README.md  autoconfig-win.h  autoconfig.h.in  configure.ac  excludefile  libnpupnp.pc.in  makesrcdist.sh  manifest.txt  meson.build  meson_options.txt  setversion.sh  symbols-reference
.github/workflows/: meson.yml  meson_clang.yml
debian/: README.source  changelog  control  control-buster  control-focal  copyright  libnpupnp-dev.dirs  libnpupnp2-dev.install  rules  watch
debian/patches/: Makefile-am-c++11.patch  autoconf-use-std-macros.patch  mhd_response_at_offset64.patch  pc-config-no-pthread.patch  series
doc/: Doxyfile  Makefile  clean.css  libnpupnp.txt  npupnp.dox  porting-from-pupnp.txt
inc/: UpnpGlobal.h  UpnpInet.h  netif.h  upnp.h  upnpconfig.h.in  upnpdebug.h  upnpdescription.h  upnptools.h
macos/: autoconfig-macos.h  upnpconfig-macos.h
macos/qmk/: libnpupnp.pro
qmk/: libnpupnp.pro
rpm/: libnpupnp.spec
src/api/: upnpapi.cpp  upnpdebug.cpp  upnptools.cpp
src/dispatcher/: miniserver.cpp
src/gena/: client_table.cpp  gena_callback2.cpp  gena_ctrlpt.cpp  gena_device.cpp  gena_sids.cpp  service_table.cpp
src/inc/: FreeList.h  ThreadPool.h  TimerThread.h  VirtualDir.h  client_table.h  config.h  expatmm.h  expatmm.hxx  gena.h  gena_ctrlpt.h  gena_device.h  gena_sids.h  genut.h  httputils.h  inet_pton.h  ithread.h  md5.h  miniserver.h  netif.h  picoxml.h  service_table.h  smallut.h  smallut_instantiate.h  soaplib.h  ssdplib.h  ssdpparser.h  statcodes.h  sysdep.h  upnp_timeout.h  upnpapi.h  upnpinet.h  upnputil.h  uri.h  utf8iter.h  webserver.h
src/soap/: soap_ctrlpt.cpp  soap_device.cpp
src/ssdp/: ssdp_ResultData.h  ssdp_ctrlpt.cpp  ssdp_device.cpp  ssdp_server.cpp  ssdpparser.cpp
src/threadutil/: ThreadPool.cpp  TimerThread.cpp
src/utils/: description.cpp  genut.cpp  httputils.cpp  inet_pton.c  inet_pton.cpp  md5.cpp  netif.cpp  smallut.cpp  sock.cpp  statcodes.cpp  uri.cpp  utf8iter.cpp  win_dll.cpp
src/utils/uuid/: sysdep.cpp  uuid.cpp
src/webserver/: webserver.cpp
subprojects/: curl.wrap  libmicrohttpd.wrap
test/: Makefile.am  meson.build  test_description.cpp  test_init.c  test_init.cpp  test_netif.cpp  test_url.c  test_url.cpp
upnp/: Makefile.am
upnp/inc/: upnp.h  upnptools.h
upnp/src/api/: upnpapi.c  upnpapi.cpp  upnpdebug.c  upnpdebug.cpp  upnptools.c
upnp/src/dispatcher/: miniserver.c  miniserver.cpp
upnp/src/gena/: client_table.c  gena_ctrlpt.c  gena_device.c  gena_device.cpp  service_table.c
upnp/src/inc/: FreeList.h  ThreadPool.h  client_table.h  description.h  gena.h  httputils.h  inet_pton.h  ithread.h  service_table.h  soaplib.h  sock.h  ssdplib.h  statuscodes.h  sysdep.h  upnp_timeout.h  upnpapi.h  upnputil.h  uri.h  webserver.h
upnp/src/soap/: soap_ctrlpt.c  soap_device.c  soap_device.cpp
upnp/src/ssdp/: ssdp_ctrlpt.c  ssdp_device.c  ssdp_server.c  ssdp_server.cpp  ssdpparser.cpp
upnp/src/threadutil/: FreeList.c  ThreadPool.c
upnp/src/utils/: httputils.c  smallut.cpp  sock.c  statcodes.c  uri.c  util.c
upnp/src/utils/uuid/: md5.c
upnp/src/webserver/: webserver.c  webserver.cpp
windows/: autoconfig-windows.h  upnpconfig-windows.h
windows/qmk/: libnpupnp.pro
