tmain_incdirs = ['../', '../inc', '../../inc',]

test_description = executable(
    'test_description',
    'test_description.cpp',
    include_directories: tmain_incdirs,
    link_with: libnpupnp,
    install: false,
)
test_init = executable(
    'test_init',
    'test_init.cpp',
    include_directories: tmain_incdirs,
    link_with: libnpupnp,
    install: false,
)
test_netif = executable(
    'test_netif',
    'test_netif.cpp',
    include_directories: tmain_incdirs,
    link_with: libnpupnp,
    install: false,
)
test_url = executable(
    'test_url',
    'test_url.cpp',
    include_directories: tmain_incdirs,
    link_with: libnpupnp,
    install: false,
)
